[gd_scene load_steps=3 format=3 uid="uid://dvxfhudeghau3"]

[ext_resource type="Script" path="res://Mine/Scripts/Credits/credits_ui.gd" id="1_nk511"]
[ext_resource type="Resource" uid="uid://c08sqlr6rc60a" path="res://Mine/Scripts/Credits/GameCredits.tres" id="2_j0daj"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 400.0
script = ExtResource("1_nk511")
creditsRef = ExtResource("2_j0daj")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_right = 400.0
offset_bottom = 200.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.294118, 0.294118, 0.294118, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[center][b]Graphics 1/1[/b][/center]"

[node name="Btn_PrevCategory" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 148.0
grow_vertical = 0
text = "Previous Category"

[node name="Btn_PrevEntry" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -72.0
offset_right = 148.0
offset_bottom = -41.0
grow_vertical = 0
text = "Previous Entry"

[node name="Btn_NextCategory" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -148.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "Next  Category"

[node name="Btn_NextEntry" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -148.0
offset_top = -72.0
offset_bottom = -41.0
grow_horizontal = 0
grow_vertical = 0
text = "Next Entry"

[connection signal="pressed" from="Btn_PrevCategory" to="." method="_on_btn_prev_category_pressed"]
[connection signal="pressed" from="Btn_PrevEntry" to="." method="_on_btn_prev_entry_pressed"]
[connection signal="pressed" from="Btn_NextCategory" to="." method="_on_btn_next_category_pressed"]
[connection signal="pressed" from="Btn_NextEntry" to="." method="_on_btn_next_entry_pressed"]
